# crud_oracle_fastapi

./: database.py  main.py  models.py  pyproject.toml  schemas.py
